fix bug #1068691 and remove stringconverter in favour of xmlutils. further sort classes needed for xml parsing and writing from utils into org.tomdroid.xml. I hope everyone agrees with this change.